# librealsense2-release

./: 0001-update-lrs-options.patch  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  README.md  Security.md  debian.store  package.xml  patches.conf  readme.md  releaser_history.json  rpm.store  tracks.yaml
.claude/: read-project-instructions.py
.github/: agent-instructions.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/skills/: add_api.md  build.md  cpp_coding.md  file_creation.md  git-workflow.md  pr-create.md  pr-review.md  pytest-infra.md  testing.md
.github/workflows/: build-ROS2-package-CI.yaml  buildsCI.yaml  static_analysis.yaml
CMake/: android_config.cmake  connectivity_check.cmake  cuda_config.cmake  external_fastcdr.cmake  external_libcurl.cmake  external_sqlite3.cmake  external_yaml_cpp.cmake  global_config.cmake  lrs_options.cmake  security_flags_helper_functions.cmake  unix_config.cmake  windows_config.cmake
common/: CMakeLists.txt  bag-conversion-helper.cpp  bag-conversion-helper.h  calibration-model.cpp  cli.h  close-range-depth-filter.h  close-range-depth-improver.cpp  close-range-depth-improver.h  d500-on-chip-calib.cpp  dds-model.cpp  dds-model.h  device-model.cpp  device-model.h  embedded-filter-model.cpp  embedded-filter-model.h  fw-update-common.h  fw-update-helper.cpp  fw-update-helper.h  hdr-model.cpp  notifications.cpp  notifications.h  objects-in-frame.cpp  objects-in-frame.h  on-chip-calib.cpp  on-chip-calib.h  option-model.cpp  option-model.h  os.cpp  output-model.cpp  parser.hpp  post-processing-filters.cpp  processing-block-model.cpp  processing-block-model.h  realsense-ui-advanced-mode.h  rendering.h  rs-config.cpp  rs-config.h  rs-depth-range-loader.h  stream-model.cpp  stream-model.h  (+8 more)
common/fw/: CMakeLists.txt
common/sw-update/: versions-db-manager.cpp  versions-db-manager.h
config/: 99-realsense-libusb.rules  librealsense-gl.pc.in  librealsense.pc.in
debian/: changelog  control  gbp.conf  rules
doc/: RaspberryPi3.md  android.md  d435i.md  depth-from-stereo.md  distribution_linux.md  distribution_windows.md  frame_lifetime.md  installation.md  installation_jetson.md  installation_raspbian.md  installation_win7.md  installation_windows.md  libuvc_installation.md  post-processing-filters.md  readme.md  record-and-playback-legacy-ros1.md  record-and-playback.md  sample-data.md  support-matrix.md  viewer-sw-fw-update.md
doc/doxygen/: doxyfile
examples/: CMakeLists.txt  readme.md
examples/align-advanced/: readme.md
examples/capture/: readme.md
examples/cmake/: hello_librealsense2.cpp  readme.md
examples/embedded-filters/: CMakeLists.txt  README.md  rs-embedded-filters.cpp
examples/enhanced-depth-range/: README.md  live_close_range_compare.py  range_depth.cpp  range_depth.py
examples/hdr/: readme.md
examples/motion/: CMakeLists.txt  readme.md
examples/multicam/: readme.md
examples/object-detection/: CMakeLists.txt  rs-object-detection.cpp
examples/pointcloud/: readme.md
examples/record-playback/: readme.md  rs-record-playback.cpp
examples/save-to-disk/: readme.md
include/librealsense2/: rs.h
include/librealsense2-gl/: rs_processing_gl.h  rs_processing_gl.hpp
rpm/: ros-humble-librealsense2.spec  ros-jazzy-librealsense2.spec  ros-rolling-librealsense2.spec  template.spec
scripts/: libuvc_installation.sh  lrs_options-to-html.py  makefile-noble-7.0.patch  patch-realsense-ubuntu-L4T.sh  patch-realsense-ubuntu-lts-hwe.sh  patch-realsense-ubuntu-lts.sh  patch-utils-hwe.sh  realsense-camera-formats-noble-master.patch  realsense-metadata-focal-hwe-5.13.patch  realsense-metadata-focal-hwe-5.15.patch  realsense-metadata-focal-master.patch  realsense-metadata-jammy-hwe-6.2.patch  realsense-metadata-jammy-hwe-6.5.patch  realsense-metadata-jammy-hwe-6.8.patch  realsense-metadata-jammy-master.patch  realsense-metadata-noble-hwe-6.11.patch  realsense-metadata-noble-hwe-6.14.patch  realsense-metadata-noble-hwe-6.8.patch  realsense-metadata-noble-master.patch  realsense_metadata_win10.ps1  rs-enum.sh
scripts/Docker/: Dockerfile
scripts/Tegra/: 5.0.repos  6.0.repos  7.0.repos  sync.sh
src/: CMakeLists.txt  archive.cpp  context.cpp  device.cpp  device.h  embedded-filter-interface.h  error-handling.cpp  error-handling.h  eth-config-device.cpp  eth-config-device.h  global_timestamp_reader.cpp  hid-sensor.cpp  hw-monitor.h  image.cpp  inference-frame.h  inference-sensor.h  librealsense-exception.h  metadata-parser.h  metadata.h  object-detection-frame.cpp  object-detection-frame.h  platform-camera.cpp  realsense.def  rs.cpp  sensor.h  software-sensor.cpp  software-sensor.h  source.cpp  stream.h  to-string.cpp  types.h  uvc-sensor.cpp  uvc-sensor.h
src/core/: CMakeLists.txt  advanced_mode.h  device-interface.h  enum-helpers.h  inference.h  matcher-factory.cpp  matcher-factory.h  options-container.h  options-interface.h  options-registry.cpp  options-watcher.cpp  options-watcher.h  sensor-interface.h  serialization.h  supported-embedded-filters-interface.h
src/cuda/: cuda-pointcloud.cu  cuda-pointcloud.cuh  rscuda_utils.cuh
src/dds/: rs-dds-depth-sensor-proxy.cpp  rs-dds-depth-sensor-proxy.h  rs-dds-device-proxy.cpp  rs-dds-device-proxy.h  rs-dds-embedded-close-range-filter.cpp  rs-dds-embedded-close-range-filter.h  rs-dds-embedded-decimation-filter.cpp  rs-dds-embedded-decimation-filter.h  rs-dds-embedded-filter.cpp  rs-dds-embedded-filter.h  (+7 more)
tools/: readme.md  tools_common.cmake
tools/depth-quality/: CMakeLists.txt  depth-quality-model.cpp  readme.md
tools/depth-quality/res/: realsense-app.rc
tools/embed/: CMakeLists.txt
unit-tests/: conftest.py  readme.md  requirements.txt  run-unit-tests.py  test-fw-update.py
wrappers/: readme.md
wrappers/rest-api/tools/react-viewer/src-tauri/: Cargo.toml  tauri.conf.json
wrappers/rest-api/tools/react-viewer/src-tauri/.cargo/: config.toml
wrappers/rest-api/tools/react-viewer/src-tauri/resources/: .gitkeep
wrappers/rest-api/tools/react-viewer/src-tauri/src/: main.rs
(+759 files in other folders)
