<?xml version="1.0"?>

<!-- This file is only used to enable the building librealsense2 -->
<!-- as a debian package for use with ROS 2 (http://ros.org) -->

<package format="2">
  <name>librealsense2</name>
  <!-- The version tag needs to be updated with each new release of librealsense -->
  <version>2.57.7</version>
  <description>
  Library for controlling and capturing data from the Intel(R) RealSense(TM) D400 devices.
  </description>

  <maintainer email="rsswsdk@realsensecloud.onmicrosoft.com">LibRealSense ROS Team</maintainer>
  <maintainer email="ashraf.kattoura@realsenseai.com">Ashraf Kattoura</maintainer>
  <maintainer email="nir.azkiel@realsenseai.com">Nir Azkiel</maintainer>

  <url type="website">https://github.com/realsenseai/librealsense/</url>

  <author email="rsswsdk@realsensecloud.onmicrosoft.com">LibRealSense ROS Team</author>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>dkms</build_depend>
  <build_depend>git</build_depend>
  <build_depend>udev</build_depend>

  <depend>libx11</depend>
  <depend>libglfw3-dev</depend>
  <depend>opengl</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
