[package]
name = "realsense-viewer"
version = "0.5.0"
description = "RealSense Viewer Desktop Application"
authors = ["RealSense Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
# This feature is used for production builds where `devPath` points to the filesystem
# and your frontend files are bundled with your binary. `customProtocol` is enabled as well for security reasons.
custom-protocol = ["tauri/custom-protocol"]
